--- a/public/about/index.html
+++ b/public/about/index.html
@@ -31,26 +31,23 @@
 
 
 <link rel="canonical" href="https://hist-digitized.netlify.app/about/"><meta property="og:title" content="About" />
-<meta property="og:description" content="Welcome to my digital journal! I&rsquo;m your host Chantal Brousseau, and this is HIST3814O Crafting Digital History!
-I&rsquo;m a 4th year History major studying Computer Science as a minor at Carleton University. I have a greater interest in the digitization of history and the archive, as well as UI/UX design, all of which has lead me on the path of pursuing a master&rsquo;s of Library and Information Science post-undergrad.
-Through using what the computer science portion of my degree has taught me, I want to find and innovate new ways in which technology can be utilized to take history beyond the realm of academia and be accessible to the greater world." />
+<meta property="og:description" content="Welcome to my digital journal! I&rsquo;m your host Chantal Brousseau, and this is a blog dedicated to documenting my forays into digital humanities.
+I&rsquo;m a 4th year History major studying Computer Science as a minor at Carleton University. I have a greater interest in the digitization of history and the archive, as well as UI/UX design, all of which has lead me on the path of pursuing a master&rsquo;s of Library and Information Science post-undergrad." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://hist-digitized.netlify.app/about/" />
 
 <meta itemprop="name" content="About">
-<meta itemprop="description" content="Welcome to my digital journal! I&rsquo;m your host Chantal Brousseau, and this is HIST3814O Crafting Digital History!
-I&rsquo;m a 4th year History major studying Computer Science as a minor at Carleton University. I have a greater interest in the digitization of history and the archive, as well as UI/UX design, all of which has lead me on the path of pursuing a master&rsquo;s of Library and Information Science post-undergrad.
-Through using what the computer science portion of my degree has taught me, I want to find and innovate new ways in which technology can be utilized to take history beyond the realm of academia and be accessible to the greater world.">
+<meta itemprop="description" content="Welcome to my digital journal! I&rsquo;m your host Chantal Brousseau, and this is a blog dedicated to documenting my forays into digital humanities.
+I&rsquo;m a 4th year History major studying Computer Science as a minor at Carleton University. I have a greater interest in the digitization of history and the archive, as well as UI/UX design, all of which has lead me on the path of pursuing a master&rsquo;s of Library and Information Science post-undergrad.">
 
-<meta itemprop="wordCount" content="111">
+<meta itemprop="wordCount" content="117">
 
 
 
 <meta itemprop="keywords" content="" /><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About"/>
-<meta name="twitter:description" content="Welcome to my digital journal! I&rsquo;m your host Chantal Brousseau, and this is HIST3814O Crafting Digital History!
-I&rsquo;m a 4th year History major studying Computer Science as a minor at Carleton University. I have a greater interest in the digitization of history and the archive, as well as UI/UX design, all of which has lead me on the path of pursuing a master&rsquo;s of Library and Information Science post-undergrad.
-Through using what the computer science portion of my degree has taught me, I want to find and innovate new ways in which technology can be utilized to take history beyond the realm of academia and be accessible to the greater world."/>
+<meta name="twitter:description" content="Welcome to my digital journal! I&rsquo;m your host Chantal Brousseau, and this is a blog dedicated to documenting my forays into digital humanities.
+I&rsquo;m a 4th year History major studying Computer Science as a minor at Carleton University. I have a greater interest in the digitization of history and the archive, as well as UI/UX design, all of which has lead me on the path of pursuing a master&rsquo;s of Library and Information Science post-undergrad."/>
 
 </head>
 <body>
@@ -85,7 +82,7 @@ Through using what the computer science portion of my degree has taught me, I wa
                         <h2 class="mb-3">About</h2>
 
                         <div class="content">
-                            <p>Welcome to my digital journal! I&rsquo;m your host Chantal Brousseau, and this is HIST3814O Crafting Digital History!</p>
+                            <p>Welcome to my digital journal! I&rsquo;m your host Chantal Brousseau, and this is a blog dedicated to documenting my forays into digital humanities.</p>
 <p>I&rsquo;m a 4th year History major studying Computer Science as a minor at Carleton University. I have a greater interest in the digitization of history and the archive, as well as UI/UX design, all of which has lead me on the path of pursuing a master&rsquo;s of Library and Information Science post-undergrad.</p>
 <p>Through using what the computer science portion of my degree has taught me, I want to find and innovate new ways in which technology can be utilized to take history beyond the realm of academia and be accessible to the greater world.</p>
 
