--- a/public/documentation/index.html
+++ b/public/documentation/index.html
@@ -40,7 +40,7 @@ Notable features  Made using Hugo, Bootstrap, and Netlify.  Directory Structure 
 <meta itemprop="description" content="This is a blog/digital journal created for use in the Carleton University course HIST3814O with Dr. Shawn Graham. Powered by Hugo and published through Netlify. The theme is a modified version of Chunky, originally created by Strict Panda.
 Notable features  Made using Hugo, Bootstrap, and Netlify.  Directory Structure Link to github repository. More information on what these folders and files do can be found in the Hugo documentation site.">
 
-<meta itemprop="wordCount" content="138">
+<meta itemprop="wordCount" content="144">
 
 
 
@@ -92,11 +92,13 @@ Notable features  Made using Hugo, Bootstrap, and Netlify.  Directory Structure 
 <pre><code class="language-bash">netlify/
 ├── archetypes          # default layout for content files
 ├── content             # website content
-| └── images            # images for content
-| └── post              # blog posts
+├ └── images            # images for content
+├ └── post              # blog posts
+├─ data                 # stores config files
+├─ layouts              # site templates
 ├─ resources            # cache of files that speeds up site generation
-├─ config.toml          # Hugo directives
-└── themes              # site theme --&gt; most aesthetic work done in here
+├─ static               # static content for site
+└── config.toml         # Hugo directives         
 </code></pre>
 <h2 id="additional-credits">Additional Credits</h2>
 <h3 id="icons">Icons</h3>
